2009-03-20  Jonathan Pryor <jpryor@novell.com>

	* Mono.Documentation/monodocs2html.cs: Perform the timestamp check for
	  the top-level and namespace-level index files.

2009-03-21  Jonathan Pryor <jpryor@novell.com>

	* Mono.Documentation/monodocer.cs: Be nice to make,
	  mdoc-export-html, and other apps that use file timetamps: if the 
	  file contents haven't changed after the update, don't replace the
	  "original" file.  This preserves file timestamps, thus allowing
	  other apps to behave nicely (e.g. mdoc-export-html won't update all
	  documentation after running mdoc-update, as the files won't change
	  unless something has *actually* changed).

2009-03-20  Jonathan Pryor <jpryor@novell.com>

	* Mono.Documentation/monodocs2html.cs: Do as make(1) does: if the
	  target file already exists and is newer than the source file, don't
	  regenerate it.  (Greatly speeds things up if only a few .xml files
	  changed.)  Add a --force-update option to disable this behavior.

2009-02-26  Jonathan Pryor <jpryor@novell.com>

	* Mono.Documentation/assembler.cs: When processing an empty directory,
	  it's possible for HelpSource.Tree to be null; avoid an NRE.

2009-02-17  Jonathan Pryor <jpryor@novell.com>

	* Test/DocTest-v1.cs: Add test for #475814.
	* Mono.Documentation/exceptions.cs, Mono.Documentation/monodocer.cs:
	  Use the new Mono.Cecil .Resolve() methods instead of (erroneously)
	  duplicating their functionality with the .GetDefinition() methods.
	  ExceptionLookup.this[IMemberReference] checks for multi-dimensional
	  arrays, as MD arrays are "special" (Cecil can't resolve them, as
	  they're internal to the runtime with no specific associated IL).
	  Fixes #475814.

2009-02-17  Jonathan Pryor <jpryor@novell.com>

	* Mono.Documentation/monodocer.cs: Check that the cref attribute is
	  non-null before trying to use it when importing slashdoc sources.
	  Fixes #475852.
	* Test/DocTest-v1.cs: Add an <exception/> doc comment with an invalid